# flypicopi

./: .gitmodules  README.md
MidiPipe/: MidiPipe.mipi
PatchBuilder/PatchBuilder/: AppDelegate.swift  Controller.swift  Info.plist  Midi.swift  MidiManager.swift  OSC.swift  UDPClient.swift  UI.swift
PatchBuilder/PatchBuilder.xcodeproj/: project.pbxproj
PatchBuilder/PatchBuilder.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
PatchBuilder/PatchBuilder.xcodeproj/project.xcworkspace/xcuserdata/mdietric.xcuserdatad/: UserInterfaceState.xcuserstate
PatchBuilder/PatchBuilder.xcodeproj/xcuserdata/mdietric.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
PatchBuilder/PatchBuilder.xcodeproj/xcuserdata/mdietric.xcuserdatad/xcschemes/: xcschememanagement.plist
PatchBuilder/PatchBuilder/Base.lproj/: MainMenu.xib
PatchBuilder/patches/: 1.fly
TouchOSC/: Flipo_Filter.touchosc  FlyPi.touchosc
hardware/: Opto-Isolator.fzz  Rotary Encoder ec11e.fzpz  breadboard_0.fzz
hardware/breadboard/: breadboard_0.fzz
hardware/pcb/components/footprints/: RPi_Pico_SMD_TH_AUDIO.kicad_mod
hardware/pcb/kicad_0/: FlyPicoPi_0.kicad_pcb  FlyPicoPi_0.kicad_pcb-bak  FlyPicoPi_0.pro  FlyPicoPi_0.sch  FlyPicoPi_0.sch-bak  fp-lib-table  kicad_0.sch-bak  sym-lib-table
src/: CMakeLists.txt  Def.h  Engine.h  MidiParser.c  MidiParser.h  ParamLoader.h  README.txt  Renderer.h  Voice.h  VoiceManager.cpp  VoiceManager.h  font.cc  lfo.h  main.c  main.cpp  oled.cc  oled.h  queue.h  sd_test.h  splash.cc  test.c  usb_descriptors.c
src/sdlib/: diskio.c  ff.h  hw_config.c  rtc.h  sd_card.c  sd_card.h  sd_spi.h  spi.c  spi.h
